k8s-manifest/voting-app/voting-app-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: voting-service
  labels:
    name: voting-service
    app: voting-app
spec:
  selector:
    name: voting-app-pod
    app: voting-app
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
